<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/layout" android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/whatsTheDate"
            android:id="@+id/textView3" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDate"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:text="date" android:layout_alignEnd="@+id/lblResults" android:onClick="dateOnClick"
            android:textSize="40px"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timeOfDay"
            android:id="@+id/textView"
            android:layout_below="@+id/lblDate" android:layout_alignParentStart="true"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblTime"
              android:text="time"
              android:layout_below="@+id/textView" android:layout_alignParentStart="true"
              android:layout_alignEnd="@+id/lblResults" android:onClick="timeOnClick" android:textSize="40px"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup" android:layout_below="@+id/lblTime" android:layout_alignParentStart="true">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radPreMeal"
                android:id="@+id/radPreMeal" android:checked="false" android:nestedScrollingEnabled="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radPostMeal"
                android:id="@+id/radPostMeal" android:checked="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radNoMeal"
                android:id="@+id/radNoMeal" android:checked="false"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView4" android:layout_below="@+id/radioGroup" android:layout_alignParentStart="true"
            android:text="@string/additionalNotes"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNotes" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" android:layout_below="@+id/textView4" android:lines="4"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.00"
            android:id="@+id/lblResults"
            android:layout_below="@+id/txtNotes" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveData"
            android:id="@+id/btnSave"
            android:onClick="saveData" android:layout_below="@+id/lblResults" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToMain"
            android:id="@+id/btnBackMain"
            android:onClick="switchToMain"
            android:layout_below="@+id/btnChartView" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewChart"
            android:id="@+id/btnChartView"
            android:layout_below="@+id/btnSave" android:layout_centerHorizontal="true" android:onClick="switchToChart"/>
</RelativeLayout>